fix: modal-wrapper: thin scrollbar; task-edit mode gets ok with icon

--- a/src/app/shared/ui/modal-wrapper/modal-wrapper.scss
+++ b/src/app/shared/ui/modal-wrapper/modal-wrapper.scss
@@ -47,6 +47,7 @@ div.modal-container {
 div.modal-content {
   height: 100%;
   overflow-y: auto;
+  scrollbar-width: thin;
 
   &.with-padding {
     padding: 2rem 1rem 1rem 1rem;
